# ocr_latin_vocabulary-rs

./: Cargo.toml  README.md
src/: main.rs
