[package]
name = "ocr_latin_vocabulary"
version = "0.0.0"
authors = ["Saleem Rashid <dev@saleemrashid.com>"]

repository = "https://github.com/saleemrashid/ocr_latin_vocabulary-rs"

license = "MIT/Apache-2.0"
readme = "README.md"

description = """
Convert OCR Latin GCSE Defined vocabulary lists to a simple format
"""

[badges]
travis-ci = { repository = "saleemrashid/ocr_latin_vocabulary-rs" }

[dependencies]
csv = "0.15.0"
unicode-normalization = "0.1.4" 
